Fix logo search on mobile view.

--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -958,7 +958,7 @@ html.is-menu, html.is-menu body
         position absolute
         display inline-block
         left -30px
-        top 16px
+        top 17px
         +breakpoint("tablet")
           background-size 100%
           left -70px
@@ -974,6 +974,8 @@ html.is-menu, html.is-menu body
       font-size 32px
       min-height 60px
       text-transform lowercase
+      padding 0
+      margin 0
       +breakpoint("tablet")
         font-size 70px
         -webkit-transition max-width .3s ease-out
